--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       <div class="modal-body">
         <div class="form-group">
           <label for="githubUsername">GitHub用户名</label>
-          <input type="text" id="githubUsername" placeholder="输入GitHub用户名" value="jingyanrong548-del">
+          <input type="text" id="githubUsername" placeholder="输入GitHub用户名">
         </div>
         <div class="import-status" id="importStatus" style="display: none;">
           <p id="importMessage"></p>
