--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
           </svg>
           <span>导入GitHub</span>
         </button>
+        <button class="btn-import" id="importVercelBtn" aria-label="从Vercel导入" title="从Vercel导入所有项目">
+          <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
+            <polyline points="7 10 12 15 17 10"></polyline>
+            <line x1="12" y1="15" x2="12" y2="3"></line>
+          </svg>
+          <span>导入Vercel</span>
+        </button>
         <button class="btn-add" id="addBtn" aria-label="添加链接">+</button>
       </div>
     </header>
@@ -90,6 +98,9 @@
         <div class="form-group">
           <label for="githubUsername">GitHub用户名</label>
           <input type="text" id="githubUsername" placeholder="输入GitHub用户名">
+          <small style="color: var(--text-secondary); font-size: 0.75rem; margin-top: 0.25rem; display: block;">
+            提示：导入时会自动更新已存在app的版本号
+          </small>
         </div>
         <div class="import-status" id="importStatus" style="display: none;">
           <p id="importMessage"></p>
@@ -101,6 +112,35 @@
       <div class="form-actions">
         <button type="button" class="btn btn-cancel" id="cancelImportBtn">取消</button>
         <button type="button" class="btn btn-submit" id="confirmImportBtn">开始导入</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- Vercel导入模态框 -->
+  <div class="modal" id="importVercelModal" style="display: none;">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h2>从Vercel导入项目</h2>
+        <button class="btn-close" id="closeImportVercelModal" aria-label="关闭">×</button>
+      </div>
+      <div class="modal-body">
+        <div class="form-group">
+          <label for="vercelToken">Vercel API Token</label>
+          <input type="password" id="vercelToken" placeholder="输入Vercel API Token">
+          <small style="color: var(--text-secondary); font-size: 0.75rem; margin-top: 0.25rem; display: block;">
+            提示：在Vercel设置中创建API Token。导入时会自动更新已存在app的版本号
+          </small>
+        </div>
+        <div class="import-status" id="importVercelStatus" style="display: none;">
+          <p id="importVercelMessage"></p>
+          <div class="progress-bar" id="progressVercelBar" style="display: none;">
+            <div class="progress-fill" id="progressVercelFill"></div>
+          </div>
+        </div>
+      </div>
+      <div class="form-actions">
+        <button type="button" class="btn btn-cancel" id="cancelImportVercelBtn">取消</button>
+        <button type="button" class="btn btn-submit" id="confirmImportVercelBtn">开始导入</button>
       </div>
     </div>
   </div>
