--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 <body>
   <div class="container">
     <header class="header">
-      <h1>我的App链接</h1>
+      <div class="header-title-section">
+        <h1>我的App链接</h1>
+        <span class="app-version" id="appVersion">v1.0.0</span>
+      </div>
       <div class="header-actions">
         <button class="btn-import" id="importBtn" aria-label="从GitHub导入" title="从GitHub导入所有仓库">
           <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
